--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "responsiveweb",
   "version": "1.0.0",
   "description": "To build a simple responsive website using html css and javascript. ",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
