--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "CSS3",
     "JAVASCRIPT"
   ],
-  "author": "Shamin Ali",
+  "author": "Shamin Ali[shaminali14@gmail.com]",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/shaminGit/shaminali14gmailcom-responsiveweb/issues"
