--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "responsiveweb",
   "version": "1.0.0",
-  "description": "To build a simple responsive website using html css and javascript. ",
+  "description": "for heroku deployment",
   "main": "index.js",
-   "engines": {
-    "node": "10.12.0"
-  },
   "scripts": {
-    "start": "node index.js",
+    "start" : "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,17 +12,19 @@
     "url": "git+https://github.com/shaminGit/shaminali14gmailcom-responsiveweb.git"
   },
   "keywords": [
-    "HTML5",
-    "CSS3",
-    "JAVASCRIPT"
+    "html",
+    "css",
+    "javascript"
   ],
-  "author": "Shamin Ali[shaminali14@gmail.com]",
+  "author": "Shamin ali [shaminali14@gmail.com]",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/shaminGit/shaminali14gmailcom-responsiveweb/issues"
   },
   "homepage": "https://github.com/shaminGit/shaminali14gmailcom-responsiveweb#readme",
-   "dependencies": {
-    "express": "^4.16.4",
-   }
+  "dependencies": {
+    "ejs": "^2.6.1",
+    "express": "^4.16.4"
+  },
+  "engines":{ "node":"10.12.0"}
 }
